--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
+    "prisma": "^7.4.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
